k8s/apps/valhalla/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: valhalla
  namespace: ${NAMESPACE}
spec:
  type: ClusterIP
  ports:
    - port: 8002
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: valhalla
